--- a/company_blog/templates/base.html
+++ b/company_blog/templates/base.html
@@ -10,7 +10,28 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta charset="utf-8">
 
-    <title></title>
+    <style>
+      .row {
+        flex-shrink: 0;
+        width: 100%;
+        max-width: 100%;
+        padding-right: calc(var(--bs-gutter-x)/ 2);
+        padding-left: calc(var(--bs-gutter-x)/ 2);
+        margin-top: var(--bs-gutter-y);
+        margin-right: calc(var(--bs-gutter-x)/ -2);
+        margin-left: calc(var(--bs-gutter-x)/ -2);
+      }
+
+      .mb-2 {
+        margin-bottom: .5rem!important;
+      }
+
+      .p-4 {
+        padding: 1.5rem!important;
+      }
+    </style>
+
+    <title>Company Blog</title>
   </head>
   <body>
 
@@ -44,13 +65,13 @@
       </header>
 
       <!-- Nav -->
-      <div class="nav-scroller py-1 mb-2">
-        <nav class="class="nav d-flex justify-content-between"">
-          <a class="p-2 link-secondary" href="{{url_for('core.index')}}">Home</a>
-          <a class="p-2 link-secondary" href="{{url_for('core.info')}}">About</a>
+      <div class="nav-scroller py-1 mb-2 rounded">
+        <nav class="class="d-flex justify-content-between"">
+          <a class="nav-item p-2 link-secondary" href="{{url_for('core.index')}}">Home</a>
+          <a class="nav-item p-2 link-secondary" href="{{url_for('core.info')}}">About</a>
           {% if current_user.is_authenticated %}
-          <a class="p-2 link-secondary" href="{{url_for('users.account')}}">Account</a>
-          <a class="p-2 link-secondary" href="{{url_for('blog_posts.create_post')}}">Create Post</a>
+          <a class="nav-item p-2 link-secondary" href="{{url_for('users.account')}}">Account</a>
+          <a class="nav-item p-2 link-secondary" href="{{url_for('blog_posts.create_post')}}">Create Post</a>
           {% endif %}
         </nav>
       </div>
