--- a/company_blog/templates/user_blog_posts.html
+++ b/company_blog/templates/user_blog_posts.html
@@ -1,38 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-  <div class="jumbotron">
-    <h1>Welcome to the page for {{user.username}}</h1>
-    <img src="{{url_for('static', filename='profile_pics/' + user.profile_image)}}">
+  <div class="jumbotron border">
+    <div align='center'>
+      <h1 >Welcome to {{user.username}}'s Blog Page</h1>
+      <img align='center' src="{{ url_for('static', filename='profile_pics/' + user.profile_image) }}">
+    </div>
   </div>
 
-  {% for post in blog_post.items %}
-    <h2><a href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">{{post.title}}</a></h2>
-    Written By: <a href="{{url_for(users.user_posts, username=post.author.username)}}">{{post.author.username}}</a>
-    <p class="text-muted">Published on: {{post.data.strftime("%Y-%m-%d")}}</p>
-    <br>
-    <p>{{post.text}}</p>
-    <br>
-  {% endfor %}
+  <div class="row mb-2">
+    {% for post in blog_posts.items %}
 
+    <div class="col-md-6">
+      <div class="bg-light row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+            <h2><a class="d-inline-block mb-2 text-primary" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">{{ post.title }}</a></h2>
+            <Written by: <a href="{{ url_for('users.user_posts', username=post.author.username) }}">Written By: {{ post.author.username }}</a>
+            <p class="text-muted">Published on: {{ post.date.strftime('%Y-%m-%d') }}</p>
+            <p class="card-text">{{post.text}}</p>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
 </div>
 
-<nav aria-label='Page Navigation'>
+
+<nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
+    {# http://flask.pocoo.org/snippets/44/ #}
 
-    {% for page_num in blog_posts.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2) %}
-      {% if blog_posts.page == page_num %}
-        <li class="page-item disabled">
-          <a class="page-link" href="{{url_for('user.user_posts', username=user.username, page=page_num)}}">{{page_num}}</a>
-        </li>
-        {% else %}
-        <li class="page-item">
-          <a class="page-link" href="{{url_for('user.user_posts', username=user.username, page=page_num)}}">{{page_num}}</a>
-        </li>
-      {% endif %}
+    {% for page_num in blog_posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+            {% if blog_posts.page == page_num %}
+              <li class="page-item disabled">
+                <a class="page-link" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a></li>
+              </li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a></li>
+            {% endif %}
     {% endfor %}
-
-  </ul>
 </nav>
-
 {% endblock content %}
